# saga-cpp-binding-python

./: CHANGES  INSTALL  Makefile  PACKAGE  README  TODO  VERSION  __DEPRECATED__  configure  configure.in
config/: Makefile  make.cfg.in  python.m4  saga.config.python.c.mk.in  saga.python.mk.in  saga_python.m4
docs/: Makefile
docs/apidocs/: Makefile  epydoc.cfg.in
docs/apidocs/html/: api-objects.txt  class-tree.html  epydoc-log.html  help.html  identifier-index.html  index.html  module-tree.html  redirect.html  saga-module.html  saga-pysrc.html  saga._engine-module.html  saga._engine.context-class.html  saga._engine.error-class.html  saga._engine.metric-class.html  saga._engine.metric.frequency-class.html  saga._engine.object-class.html  saga._engine.object.object_type-class.html  saga._engine.permission-class.html  saga._engine.session-class.html  saga._engine.task-class.html  saga._engine.task.routine_type-class.html  saga._engine.task.task_state-class.html  saga._engine.task_container-class.html  saga._engine.url-class.html  saga._engine.uuid-class.html  saga.advert-module.html  saga.advert-pysrc.html  saga.advert._advert-module.html  saga.advert._advert.directory-class.html  saga.advert._advert.entry-class.html  saga.advert._advert.flags-class.html  saga.advert.directory-class.html  saga.advert.entry-class.html  saga.advert.flags-class.html  saga.already_exists-class.html  saga.authentication_failed-class.html  saga.authorization_failed-class.html  saga.bad_parameter-class.html  saga.context-class.html  saga.cpr-module.html  (+108 more)
docs/apidocs/python/: api-objects.txt  class-tree.html  help.html  identifier-index.html  index.html  module-tree.html  redirect.html  saga-module.html  saga._engine-module.html  saga._engine._already_exists-class.html  saga._engine._authentication_failed-class.html  saga._engine._authorization_failed-class.html  saga._engine._bad_parameter-class.html  saga._engine._does_not_exist-class.html  saga._engine._exception-class.html  saga._engine._incorrect_state-class.html  saga._engine._incorrect_url-class.html  saga._engine._no_success-class.html  saga._engine._not_implemented-class.html  saga._engine._parameter_exception-class.html  saga._engine._permission_denied-class.html  saga._engine._security_exception-class.html  saga._engine._state_exception-class.html  saga._engine._timeout-class.html  saga._engine.context-class.html  saga._engine.error-class.html  saga._engine.metric-class.html  saga._engine.metric.frequency-class.html  saga._engine.object-class.html  saga._engine.object.object_type-class.html  saga._engine.permission-class.html  saga._engine.session-class.html  saga._engine.task-class.html  saga._engine.task.routine_type-class.html  saga._engine.task.task_state-class.html  saga._engine.task_container-class.html  saga._engine.url-class.html  saga._engine.uuid-class.html  saga.advert-module.html  saga.advert._advert-module.html  (+55 more)
engine/: Makefile  __init__.py.in  container_mappings.hpp  engine.cpp  register_buffer.cpp  register_context.cpp  register_exception.cpp  register_metric.cpp  register_object.cpp  register_session.cpp  register_task.cpp  register_task_container.cpp  register_types.hpp  register_url.cpp  register_uuid.cpp  register_version.cpp  routine_types.hpp
examples/filesystem/: hello_file_world.py  simple_example.py
examples/job/: hello_job_world.py  mpi_example.py  openmp_example.py  simple_example.py
project/VS.NET/: python_saga-lite.props  python_saga.props  python_saga_package-lite.props  python_saga_package.props  saga_python.sln
project/VS.NET/python_advert/: advert.vcxproj  advert.vcxproj.filters
project/VS.NET/python_cpr/: cpr.vcxproj  cpr.vcxproj.filters
project/VS.NET/python_engine/: engine.vcxproj  engine.vcxproj.filters
project/VS.NET/python_file/: file.vcxproj  file.vcxproj.filters
project/VS.NET/python_job/: job.vcxproj  job.vcxproj.filters
project/VS.NET/python_namespace/: name_space.vcxproj  name_space.vcxproj.filters
project/VS.NET/python_replica/: replica.vcxproj  replica.vcxproj.filters
project/VS.NET/python_sd/: sd.vcxproj  sd.vcxproj.filters
project/VS.NET/python_stream/: stream.vcxproj  stream.vcxproj.filters
test/: Makefile
test/benchmarks/: __init__.py  saga_benchmarks.py
test/benchmarks/usecases/: __init__.py
test/benchmarks/usecases/advert/: __init__.py
test/benchmarks/usecases/advert/bigjob/: __init__.py  bigjob.py  bigjob_advert.py
test/benchmarks/usecases/advert/mapreduce/: __init__.py  advert_mapreduce.py  mapreduce.py
test/benchmarks/usecases/advert/repex/: __init__.py  repex.py
test/benchmarks/usecases/advert/simple/: __init__.py  simple.py
test/python/: Makefile  README  saga_python_tests.py
test/python/suite/: __init__.py
test/unit_tests/: Makefile
test/unit_tests/suite/: __init__.py  context.py
